promo box now a button

--- a/app/views/info/_promo.html.erb
+++ b/app/views/info/_promo.html.erb
@@ -1,7 +1,9 @@
 <div id='graphic'>
+	<%= link_to(static_pages_features_path) do %>
 	<div id='promo'>
 		<div id='title'>
-			No more waiting at the doctor's!
+			<span>No more waiting at the doctor's!</span>
+			
 		</div>
 		
 		<table>
@@ -19,6 +21,7 @@
 			</tr>
 		</table>
 		
-		<%= link_to 'Take a tour...', static_pages_features_path %>
+		<p>Take a tour...</p>
 	</div>
+	<% end %>
 </div>
