--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -114,36 +114,49 @@
           padding-right: 10px;
           padding-left: 6%;
           
-          #promo {
-            width: 100%;
-            height: 300px;
-            border-style:solid;
-            border-width:2px;
-            border-color:#033076;
-            -webkit-border-radius:10px;
-            -moz-border-radius:10px;
-            border-radius:10px;
-            background-color:#ffffff;
-            
-            .number {
-              font-size:2em;
-              color: #033076;
-              padding: 15px 5px 0px 15px;
+          a {
+            &:hover {
+              text-decoration: none;
+              
+              p {
+                text-decoration: underline;
+              }
             }
+          
+            #promo {
+              width: 100%;
+              height: 300px;
+              border-style:solid;
+              border-width:2px;
+              border-color:#033076;
+              -webkit-border-radius:10px;
+              -moz-border-radius:10px;
+              border-radius:10px;
+              background-color:#ffffff;
             
-            .msg {
-              font-size:1.1em;
-              color: #000000;
-              line-height: 18px;
-              vertical-align: top;
-              padding: 15px 15px 0px 0px;
-            }
+              &:hover {
+                background-color: #e7f0fd;
+              }
             
-            a {
-              display: block;
-              margin-top: 15px;
-              font-size: 1.4em;
-              text-align: center;
+              .number {
+                font-size:2em;
+                color: #033076;
+                padding: 15px 5px 0px 15px;
+              }
+            
+              .msg {
+                font-size:1.1em;
+                color: #000000;
+                line-height: 18px;
+                vertical-align: top;
+                padding: 15px 15px 0px 0px;
+              }
+            
+              p {
+                margin-top: 15px;
+                font-size: 1.4em;
+                text-align: center;
+              }
             }
           }
         }
