measurement of bp optimization

--- a/app/views/info/_measuring_bp_title.html.erb
+++ b/app/views/info/_measuring_bp_title.html.erb
@@ -1,11 +1,11 @@
 <div id='strip1'>
 	<div id='strip1_content'>
-		<h1>How you can measure your blood pressure</h1>
+		<h1>Measurement of blood pressure</h1>
 		
-		<% if !user_signed_in? %>
-		<p>Sign up so that you'll get clear instructions on how and when to measure your blood pressure...</p>
-		<p>Then you'll be able to keep a running record of your blood pressure...</p>
-		<p>And we can do the hard work for you and work out your average blood pressure.</p>
+		<% if ! user_signed_in? %>
+		<p>Sign up and you'll get clear instructions on how and when to take a measurement of your blood pressure...</p>
+		<p>Then we'll do the hard work for you and work out your average blood pressure...</p>
+		<p>And you will get FREE advice from UK GPs.</p>
 		<%= link_to 'Find out more...', static_pages_features_path %>
 		<% end %>
 	</div>
