--- a/app/views/info/home-blood-pressure.html.erb
+++ b/app/views/info/home-blood-pressure.html.erb
@@ -23,9 +23,9 @@
 				<span class='link_title'>What is blood pressure?</span>
 				<span class='link_text'>It's a measure of the pressure in your arteries... <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_path('measuring-blood-pressure'), :class => 'info_link2') do %>
+			<%= link_to(info_path('measurement-of-blood-pressure'), :class => 'info_link2') do %>
 				<%= image_tag("woman_taking_bp_small.jpg") %>
-				<span class='link_title'>Measuring blood pressure</span>
+				<span class='link_title'>Measurement of blood pressure</span>
 				<span class='link_text'>Using a home blood pressure machine is a good way to measure your blood pressure... <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_path('treating-blood-pressure'), :class => 'info_link1') do %>
