--- a/app/views/info/how-do-i-take-a-measurement-of-my-blood-pressure.html.erb
+++ b/app/views/info/how-do-i-take-a-measurement-of-my-blood-pressure.html.erb
@@ -5,7 +5,7 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<div id='welcome'>
-				<h2>How do I measure my blood pressure?</h2>
+				<h2>How do I take a measurement of my blood pressure?</h2>
 			</div>
 			<%= render 'info/questions' %>
 			<div id='text'>
