--- a/app/views/info/measurement-of-blood-pressure.html.erb
+++ b/app/views/info/measurement-of-blood-pressure.html.erb
@@ -14,19 +14,19 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<div id='welcome'>
-				<h2>Measuring blood pressure</h2>
+				<h2>Measurement of blood pressure</h2>
 			</div>
 		</div>
 		
 		<div id='links'>
-			<%= link_to(info_path('how-do-i-measure-my-blood-pressure'), :class => 'info_link1') do %>
+			<%= link_to(info_path('how-do-i-take-a-measurement-of-my-blood-pressure'), :class => 'info_link1') do %>
 				<%= image_tag("woman_taking_bp_small.jpg") %>
-				<span class='link_title'>How do I measure my blood pressure?</span>
+				<span class='link_title'>How do I take a measurement of my blood pressure?</span>
 				<span class='link_text'>One of the best ways is to use a home blood pressure machine… <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_path('when-should-i-measure-my-blood-pressure'), :class => 'info_link2') do %>
+			<%= link_to(info_path('when-should-i-take-a-measurement-of-my-blood-pressure'), :class => 'info_link2') do %>
 				<%= image_tag("diary_small.jpg") %>
-				<span class='link_title'>When should I measure my blood pressure?</span>
+				<span class='link_title'>When should I take a measurement of my blood pressure?</span>
 				<span class='link_text'>You should measure your blood pressure each morning and evening… <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_path('how-do-i-choose-a-blood-pressure-machine'), :class => 'info_link1') do %>
