--- a/app/views/account/restart_needed.html.erb
+++ b/app/views/account/restart_needed.html.erb
@@ -1,8 +1,6 @@
 <div id='main'>
 	
-	<div id='strip1'>
-
-	</div>
+	<%= render 'info/account_title' %>
 	
 	<div id='strip5'>
 		<div id='strip5_content'>
