--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -1,6 +1,6 @@
 <div id='main'>
 	
-	<%= render 'info/generic_title' %>
+	<%= render 'info/account_title' %>
 	
 	<div id='strip2'>
 		<div id='strip2_content'>
