--- a/app/views/info/_generic_title.html.erb
+++ b/app/views/info/_generic_title.html.erb
@@ -1,12 +1,9 @@
 <div id='strip1'>
 	<div id='strip1_content'>
 		<h1>The best blood pressure treatment</h1>
-				
-		<% if !user_signed_in? %>
 		<p>Use our site to measure and treat your blood pressure in the comfort of your own home</p>
-		<p>Get free personalised advice about your blood pressure at any time, night or day</p>
-		<p>If you need them, get prescriptions delivered to your doorstep at a very reasonable price</p>
-		<%= link_to 'Find out more...', static_pages_features_path %>
-		<% end %>
+		<p>Get personalised advice about your blood pressure at any time, night or day</p>
+		<p>If you need them, get prescriptions delivered to your doorstep</p>
+		<%= link_to 'Take a tour...', static_pages_features_path %>
 	</div>
 </div>
