--- a/app/views/info/_measuring_bp_title.html.erb
+++ b/app/views/info/_measuring_bp_title.html.erb
@@ -1,12 +1,9 @@
 <div id='strip1'>
 	<div id='strip1_content'>
 		<h1>Measurement of blood pressure</h1>
-		
-		<% if ! user_signed_in? %>
-		<p>Sign up and you'll get clear instructions on how and when to take a measurement of your blood pressure...</p>
-		<p>Then we'll do the hard work for you and work out your average blood pressure...</p>
+		<p>You will get clear instructions on how and when to take a measurement of your blood pressure...</p>
+		<p>Then we'll do the hard work for you and calculate your average blood pressure...</p>
 		<p>And you will get FREE advice from UK GPs.</p>
-		<%= link_to 'Find out more...', static_pages_features_path %>
-		<% end %>
+		<%= link_to 'Take a tour...', static_pages_features_path %>
 	</div>
 </div>
