--- a/app/views/info/_treating_bp_title.html.erb
+++ b/app/views/info/_treating_bp_title.html.erb
@@ -2,13 +2,10 @@
 	
 	<div id='strip1_content'>
 		<h1>Your choice of blood pressure treatment</h1>
-		
-		<% if !user_signed_in? %>
-		<p>Sign up and you will get FREE advice about treating your blood pressure from UK GPs...</p>
+		<p>You will get FREE advice about treating your blood pressure from UK GPs...</p>
 		<p>Then you will be the one in charge of your own treatment...</p>
 		<p>And you can choose to have your prescription delivered to your door.</p>
-		<%= link_to 'Find out more...', static_pages_features_path %>
-		<% end %>
+		<%= link_to 'Take a tour...', static_pages_features_path %>
 	</div>
 	
 </div>
