--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -119,7 +119,7 @@ a:hover {
 #user_nav {
   float:right;
   font-size:0.8em;
-  border-left: 1px solid #ffffff;
+  //border-left: 1px solid #ffffff;
   padding-left: 15px;
   margin-bottom: 10px;
   margin-left: 15px;
