--- a/app/views/account/readings_due.html.erb
+++ b/app/views/account/readings_due.html.erb
@@ -1,7 +1,6 @@
 <div id='main'>
 	
-	<div id='strip1'>
-	</div>
+	<%= render 'info/account_title' %>
 	
 	<div id='strip4'>
 		<div id='strip4_content'>
@@ -12,12 +11,12 @@
 				<% elsif @bp_entry_details[:bp_given] == 'skipped' %>
 					<p>OK, don't worry. Missing the odd reading isn't the end of the world!</p>
 				<% else %>
-					<p class='bigger'>Welcome back <%= current_user.email %></p>
+					<p class='bigger'>Hello <%= current_user.email %></p>
 				<% end %>
 			</div>
 			
 			<div id='graphic'>
-				<% if !@average_sysbp.nil? %>
+				<% if ! @average_sysbp.nil? %>
 					<div id='average_bp'>
 						<%= render :partial => 'average_bp', :locals => {:avsys => @average_sysbp, :avdia => @average_diabp, :bppos => @bp_position} %>
 					</div>
@@ -31,7 +30,7 @@
 				<% if @bp_entry_details[:bp_given] == 'skipped' %>
 					<p>Ideally try to take a pair of blood pressure readings every morning and evening for 4 days. Don't worry if you miss the occasional reading, but the set must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of your blood pressure so you will know if it is too high.</p>
 				<% elsif @bp_entry_details[:bp_given] == nil %>
-					<p>It's time to record some more blood pressure readings. Taking a set of readings over several days will give you an accurate measure of your blood pressure. From an accurate measure we'll give you reliable advice. That way you will know whether your blood pressure really is too high.</p>
+					<p>It's time to record some blood pressure readings. Taking a set of readings over several days will give you an accurate measure of your blood pressure. From an accurate measure we'll give you reliable advice. That way you will know whether your blood pressure really is too high.</p>
 				<% end %>
 			</div>
 
