--- a/app/views/info/_what_is_bp_title.html.erb
+++ b/app/views/info/_what_is_bp_title.html.erb
@@ -1,12 +1,9 @@
 <div id='strip1'>
 	<div id='strip1_content'>
 		<h1>Find out more about your blood pressure</h1>
-		
-		<% if !user_signed_in? %>
-		<p>Sign up and you will get clear information about your blood pressure...</p>
+		<p>You will get clear information about your blood pressure...</p>
 		<p>You can get up to date personalised advice from UK GPs...</p>
 		<p>And you won't have the hassle of trying to get an appointment at your doctor's.</p>
-		<%= link_to 'Find out more...', static_pages_features_path %>
-		<% end %>
+		<%= link_to 'Take a tour...', static_pages_features_path %>
 	</div>
 </div>
