--- a/app/views/info/medication.html.erb
+++ b/app/views/info/medication.html.erb
@@ -1,10 +1,9 @@
 <div id='main'>
 	<%= render 'info/treating_bp_title' %>
 	
-	<% if !user_signed_in? %>
+	<% if @batch_average_bp_count == 0 %>
 	<div id='strip2'>
 		<div id='strip2_content'>
-			<%= render 'info/promo' %>
 			<%= render 'info/is_my_bp_too_high' %>
 		</div>
 	</div>
