--- a/app/views/info/what-is-blood-pressure.html.erb
+++ b/app/views/info/what-is-blood-pressure.html.erb
@@ -2,10 +2,9 @@
 	
 	<%= render 'info/what_is_bp_title' %>
 	
-	<% if !user_signed_in? %>
+	<% if @batch_average_bp_count == 0 %>
 	<div id='strip2'>
 		<div id='strip2_content'>
-			<%= render 'info/promo' %>
 			<%= render 'info/is_my_bp_too_high' %>
 		</div>
 	</div>
