--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -160,6 +160,43 @@
             }
           }
         }
+        
+        #text_landing_page {
+          //min-height: 240px;
+          
+          h2 {
+            font-size:1.8em;
+            color: #033076;
+            font-weight: normal;
+            margin: 0px;
+            line-height: 45px;
+            
+            span {
+              font-size: 1.7em;
+            }
+          }
+        }
+        
+        #graphic_landing_page {
+          float: right;
+          width: 320px;
+          margin: 0px auto 30px auto;
+          padding-top: 10px;
+          padding-right: 0px;
+          padding-left: 6%;
+          
+          #sign_up {
+            width: 100%;
+            height: 330px;
+            border-style:solid;
+            border-width:5px;
+            border-color:#033076;
+            -webkit-border-radius:14px;
+            -moz-border-radius:14px;
+            border-radius:14px;
+            background-color:#ffffff;
+          }
+        }
       }
     }
     
@@ -214,7 +251,40 @@
           }
         }
       }
+      
+      #text_landing_page {
+        padding-top: 30px;
+        
+        .section {
+          padding-top: 50px;
+          
+          h2 {
+            font-size:1.6em;
+            color: #033076;
+            font-weight: normal;
+            line-height: 25px;
+            padding: 20px 0px 0px 0px;
+            margin: 0px;
+          }
+        
+          p {
+            font-size:1.1em;
+            color: #000000;
+            margin: 20px 0px 0px 0px;
+          }
+        
+          .left {
+            float: left;
+            padding: 0px 40px 20px 0px;
+          }
+        
+          .right {
+            float: right;
+            padding: 0px 0px 20px 40px;
+          }
+        }
       }
+      
       
       #graphic {
         float: right;
@@ -243,6 +313,7 @@
             }
           }
         }
+      }
       }
         
       #links {
@@ -329,7 +400,6 @@
       
       #strip4_content {
         width: 90%;
-        //max-width: 1000px;
         margin-left: auto;
         margin-right: auto;
         padding-bottom: 30px;
@@ -568,7 +638,7 @@
     }
     
     #nav_form, #contact_form {
-      padding: 0px 0px 0px 3%;
+      padding: 20px 0px 0px 3%;
       
       h2 {
         font-size:1.8em;
