improved landing page copy, fonts and green sign-up box

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -236,6 +236,10 @@ a.button7:hover {
   color: #000000;
 }
 
+.button7 {
+  background-color:#ff8000;
+}
+
 .button4, .button5 {
   display:block;
   text-align:center;
