--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -46,7 +46,7 @@
 						<div id='tac_error_msg'>
 						</div>
   						<div id='sign_up_button'>
-  							<button type='submit' class='button3' onClick="ga('send', 'event', 'Button', 'Sign-up');">
+  							<button type='submit' class='button3 button7' onClick="ga('send', 'event', 'Button', 'Sign-up');">
   								<span>Get advice about your blood pressure</span>
   							</button>
   						</div>
@@ -78,13 +78,13 @@
 				<div class='section'>
 					<%= image_tag("house_not_copyright_cleared_small.jpeg", size: '300x210', :class => 'right') %>
 					<h2>You can do it all from home</h2>
-					<p>These guidelines also recommend that you measure your blood pressure at home rather than at the surgery. This will give you a more accurate idea of how high your blood pressure is. Then by answering a few simple questions, you’ll be able to see which medications are suitable for you.</p>
+					<p>These guidelines recommend that you measure your blood pressure at home. This will give you a more accurate idea of how high your blood pressure is. Up to 30% of people get incorrect high readings when their blood pressure is measured at the doctor's.</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
 					<%= image_tag("clock_not_copyright_cleared_small.jpg", size: '250x250', :class => 'left') %>
 					<h2>You will save time</h2>
-					<p>This will save you time. This will be more convenient for you. This will also free up time for your doctor to deal with more complex problems.</p>
+					<p>This will save you time. This will be more convenient for you. It will also free up time for your doctor to deal with more complex problems. Even better, you will avoid being given medications that you don't really need.</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
@@ -96,13 +96,13 @@
 				<div class='section'>
 					<%= image_tag("graphic_close_up.jpg", size: '320x210', :class => 'left') %>
 					<h2>Quickly see how high your blood pressure is</h2>
-					<p>You can clearly see how high your blood pressure is. You can get personalised advice from experienced UK GPs to help lower your blood pressure. You can even get prescriptions delivered to your door!</p>
+					<p>You can clearly see how high your blood pressure is. You will get personalised advice from experienced UK GPs to help lower your blood pressure. You can even get prescriptions delivered to your door!</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
 					<%= image_tag("ask_close_up.jpg", size: '320x210', :class => 'right') %>
 					<h2>Got a question? Ask a doctor!</h2>
-					<p>You will find answers to most of your questions on our extensive, friendly information pages. If you have any other questions for us you can just ask at the click of a button!</p>
+					<p>You will find answers to your questions on our extensive, friendly information pages. If you have any other questions you can just ask us at the click of a button!</p>
 				</div>
 				<div class='clear_float'></div>
 			</div>
