--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -13,7 +13,8 @@
         padding: 40px 0px 40px 0px;   
       
         h1 {
-          font-size:2.5em;
+          font-family: Baskerville, serif;
+          font-size:2.8em;
           color: #033076;
           font-weight: normal;
           line-height: 35px;
@@ -49,7 +50,8 @@
         #text {
         
           h2 {
-            font-size:1.8em;
+            font-family: Baskerville, serif;
+            font-size:2em;
             color: #033076;
             font-weight: normal;
             margin: 0px;
@@ -190,11 +192,26 @@
             height: 330px;
             border-style:solid;
             border-width:5px;
-            border-color:#033076;
+            border-color:#4c7a34;
             -webkit-border-radius:14px;
             -moz-border-radius:14px;
             border-radius:14px;
-            background-color:#ffffff;
+            background-color:#dfedd6;
+            
+            #title {
+              border-style:solid;
+              border-width:2px;
+              border-color:#4c7a34;
+              -webkit-border-radius:7px;
+              -moz-border-radius:7px;
+              border-radius:7px;
+              background-color:#4c7a34;
+              color:#ffffff;
+              font-size: 1.5em;
+              text-align: center;
+              line-height: 22px;
+              padding: 5px 8px 8px 8px;
+            }
           }
         }
       }
@@ -215,7 +232,8 @@
         #text, #welcome {
         
         h2 {
-          font-size:1.8em;
+          font-family: Baskerville, serif;
+          font-size:2em;
           color: #033076;
           font-weight: normal;
           line-height: 25px;
@@ -224,7 +242,8 @@
         }
         
         h3 {
-          font-size:1.3em;
+          font-family: Baskerville, serif;
+          font-size:1.5em;
           color: #033076;
           font-weight: normal;
           padding: 10px 0px 0px 3%;
@@ -259,6 +278,7 @@
           padding-top: 50px;
           
           h2 {
+            font-family: Baskerville, serif;
             font-size:1.6em;
             color: #033076;
             font-weight: normal;
