--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -18,19 +18,20 @@
           color: #033076;
           font-weight: normal;
           line-height: 35px;
-          margin: 0px;
+          margin: 0px 0px 15px 0px;
         }
         
         p {
           font-size:1.1em;
           line-height: 20px;
           color: #0844a4;
-          margin: 15px 5px 10px 3%;
+          margin: 5px 5px 0px 3%;
         }
         
         a {
+          display: block;
           font-size:1.2em;
-          margin: 0px 5px 0px 3%;
+          margin: 10px 5px 0px 3%;
         }
       }
     }
@@ -164,21 +165,27 @@
         }
         
         #text_landing_page {
-          //min-height: 240px;
+          //max-height: 270px;
           
-          h2 {
+          td {
             font-size:1.8em;
             color: #033076;
             font-weight: normal;
-            margin: 0px;
-            line-height: 45px;
+            height: 45px;
+            line-height: 35px;
             
-            span {
-              font-size: 1.7em;
+            img {
+              width: 100%;
+              height: 150px;
             }
           }
+          
+          .number {
+            font-size: 3em;
+            padding-right: 10px;
+          }
         }
-        
+
         #graphic_landing_page {
           float: right;
           width: 320px;
@@ -189,7 +196,7 @@
           
           #sign_up {
             width: 100%;
-            height: 330px;
+            height: 400px;
             border-style:solid;
             border-width:5px;
             border-color:#4c7a34;
@@ -272,10 +279,10 @@
       }
       
       #text_landing_page {
-        padding-top: 30px;
+        padding-top: 20px;
         
         .section {
-          padding-top: 50px;
+          margin-top: 80px;
           
           h2 {
             font-family: Baskerville, serif;
@@ -283,24 +290,26 @@
             color: #033076;
             font-weight: normal;
             line-height: 25px;
-            padding: 20px 0px 0px 0px;
+            padding: 0px 0px 0px 0px;
             margin: 0px;
           }
         
           p {
             font-size:1.1em;
             color: #000000;
-            margin: 20px 0px 0px 0px;
+            margin: 15px 0px 0px 0px;
           }
-        
-          .left {
-            float: left;
-            padding: 0px 40px 20px 0px;
-          }
-        
-          .right {
+          
+          .image_right {
+            width: 320px;
             float: right;
             padding: 0px 0px 20px 40px;
+          }
+        
+          .image_left {
+            width: 320px;
+            float: left;
+            padding: 0px 40px 20px 0px;
           }
         }
       }
@@ -696,7 +705,7 @@
       }
       
       #sign_up_button {
-        width: 220px;
+        width: 260px;
         margin: 10px auto 20px auto;
       }
       
@@ -727,9 +736,16 @@
         font-size: 1em;
       }
       
-      //#send_button {
-        //margin: 20px 0px 20px 200px;
-      //}
+      p {
+        font-size:1.3em;
+        color: #000000;
+        //padding: 0px 0px 0px 3%;
+        text-align: center;
+        
+        span {
+          font-weight: bold;
+        }
+      }
     }
   }
 }
