--- a/app/views/current_bps/_promo_form.html.erb
+++ b/app/views/current_bps/_promo_form.html.erb
@@ -9,7 +9,7 @@
 			<td><%= f.text_field(:diabp) %><span id='mmhg'>mmHg</span></td>
 			<td colspan='3' id='submit'>
 				<button type='submit' class='button6' onClick="ga('send', 'event', 'Button', 'BP-entered');">
-  				Get advice about
+  				Get instant advice about
   				<br />
   				your blood pressure
   				</button>
