--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -47,22 +47,35 @@
 						</div>
   						<div id='sign_up_button'>
   							<button type='submit' class='button3 button7' onClick="ga('send', 'event', 'Button', 'Sign-up');">
-  								<span>Get advice about your blood pressure</span>
+  								<span>Get instant advice about your blood pressure</span>
   							</button>
   						</div>
 						<% end %>
+						<p><span>FREE</span> 30 day trial</p>
+						<p>No obligation</p>
 					</div>
 				</div>
 			</div>
 			
 			<div id='text_landing_page'>
-				<h2><span>1.</span> Measure your blood pressure</h2>
-				<h2><span>2.</span> Get personalised advice from UK GPs</h2>
-				<h2><span>3.</span> Have prescriptions delivered to your door</h2>
+				<table>
+					<tr>
+						<td class='number'>1.</td>
+						<td>Measure your blood pressure</td>
+					</tr>
+					<tr>
+						<td class='number'>2.</td>
+						<td>Get personalised advice from UK GPs</td>
+					</tr>
+					<tr>
+						<td class='number'>3.</td>
+						<td>Have prescriptions delivered to your door</td>
+					</tr>
+					<tr id='arrow'>
+						<td colspan="2"><%= image_tag('arrow-right-blue.gif') %></td>
+					</tr>
+				</table>
 			</div>
-			
-			<%= image_tag('arrow-right-blue.gif', size: '500x100') %>
-			
 		</div>
 	</div>
 	
@@ -70,37 +83,37 @@
 		<div id='strip3_content'>
 			<div id='text_landing_page'>
 				<div class='section'>
-					<%= image_tag("tech_not_copyright_cleared_small.jpg", size: '300x210', :class => 'left') %>
+					<div class='image_left'><%= image_tag("tech_not_copyright_cleared_small.jpg", size: '300x210') %></div>
 					<h2>Take your health into the 21st century</h2>
 					<p>You may be wondering how it’s possible to treat blood pressure on-line without having to see a doctor or nurse. This is because the most recent guidelines have made the treatment of blood pressure much more simple.</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
-					<%= image_tag("house_not_copyright_cleared_small.jpeg", size: '300x210', :class => 'right') %>
+					<div class='image_right'><%= image_tag("house_not_copyright_cleared_small.jpeg", size: '300x210') %></div>
 					<h2>You can do it all from home</h2>
-					<p>These guidelines recommend that you measure your blood pressure at home. This will give you a more accurate idea of how high your blood pressure is. Up to 30% of people get incorrect high readings when their blood pressure is measured at the doctor's.</p>
+					<p>These guidelines actually recommend that you measure your blood pressure at home. This will give you a more accurate idea of how high your blood pressure is. Up to 30% of people get incorrect high readings when their blood pressure is measured at the doctor's.</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
-					<%= image_tag("clock_not_copyright_cleared_small.jpg", size: '250x250', :class => 'left') %>
+					<div class='image_left'><%= image_tag("clock_not_copyright_cleared_small.jpg", size: '250x250') %></div>
 					<h2>You will save time</h2>
-					<p>This will save you time. This will be more convenient for you. It will also free up time for your doctor to deal with more complex problems. Even better, you will avoid being given medications that you don't really need.</p>
+					<p>This will save you time. This will be more convenient for you. It will also free up time for your doctor to deal with more complex problems.</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
-					<%= image_tag("measurement_close_up.jpg", size: '320x210', :class => 'right') %>
+					<div class='image_right'><%= image_tag("measurement_close_up.jpg", size: '320x210') %></div>
 					<h2>Accurately measure your blood pressure</h2>
 					<p>You can follow our simple instructions to get a highly accurate measurement of your blood pressure. You can securely store your readings in your on-line account for access any time, anywhere.</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
-					<%= image_tag("graphic_close_up.jpg", size: '320x210', :class => 'left') %>
+					<div class='image_left'><%= image_tag("graphic_close_up.jpg", size: '320x210') %></div>
 					<h2>Quickly see how high your blood pressure is</h2>
 					<p>You can clearly see how high your blood pressure is. You will get personalised advice from experienced UK GPs to help lower your blood pressure. You can even get prescriptions delivered to your door!</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
-					<%= image_tag("ask_close_up.jpg", size: '320x210', :class => 'right') %>
+					<div class='image_right'><%= image_tag("ask_close_up.jpg", size: '320x210') %></div>
 					<h2>Got a question? Ask a doctor!</h2>
 					<p>You will find answers to your questions on our extensive, friendly information pages. If you have any other questions you can just ask us at the click of a button!</p>
 				</div>
