--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -236,8 +236,9 @@ a.button7:hover {
   color: #000000;
 }
 
-.button7 {
+.button8 {
   background-color:#ff8000;
+  font-size: 0.9em;
 }
 
 .button4, .button5 {
