--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -196,7 +196,8 @@
           
           #sign_up {
             width: 100%;
-            height: 400px;
+            //height: 400px;
+            padding-bottom: 20px;
             border-style:solid;
             border-width:5px;
             border-color:#4c7a34;
@@ -279,7 +280,7 @@
       }
       
       #text_landing_page {
-        padding-top: 20px;
+        padding-top: 1px;
         
         .section {
           margin-top: 80px;
