--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -83,39 +83,39 @@
 		<div id='strip3_content'>
 			<div id='text_landing_page'>
 				<div class='section'>
-					<div class='image_left'><%= image_tag("tech_not_copyright_cleared_small.jpg", size: '288x200') %></div>
+					<div class='image_left'><%= image_tag("Fotolia_healthtech_not_copyright_cleared_small.jpg", size: '288x220') %></div>
 					<h2>Take your health into the 21st century</h2>
-					<p>You may be wondering how it’s possible to treat blood pressure on-line without having to see a doctor or nurse. This is because the most recent guidelines have made the treatment of blood pressure much more simple.</p>
+					<p>You may be wondering how it’s possible to treat blood pressure on-line without having to see a doctor or nurse. Well, recent expert advice changed the treatment of blood pressure and made it much more simple... So, doctors created this website to automatically follow this new, improved advice.</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
 					<div class='image_right'><%= image_tag("house_not_copyright_cleared_small.jpeg", size: '288x200') %></div>
 					<h2>You can do it all from home</h2>
-					<p>These guidelines actually recommend that you measure your blood pressure at home. This will give you a more accurate idea of how high your blood pressure is. Up to 30% of people get incorrect high readings when their blood pressure is measured at the doctor's.</p>
+					<p>Did you know that up to 30% of people get incorrect high readings when their blood pressure is measured at the doctor's? Not surprisingly, new expert advice recommends that you measure your blood pressure at home. This will give you a more accurate idea of how high your blood pressure is.</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
 					<div class='image_left'><%= image_tag("clock_not_copyright_cleared_small.jpg", size: '250x250') %></div>
 					<h2>You will save time</h2>
-					<p>This will save you time. This will be more convenient for you. It will also free up time for your doctor to deal with more complex problems.</p>
+					<p>This will save you time. It will also be more convenient for you. Your doctor will benefit too as it will free up their time to deal with more complex problems. Everyone wins!</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
-					<div class='image_right'><%= image_tag("measurement_close_up.jpg", size: '288x190') %></div>
-					<h2>Accurately measure your blood pressure</h2>
-					<p>You can follow our simple instructions to get a highly accurate measurement of your blood pressure. You can securely store your readings in your on-line account for access any time, anywhere.</p>
+					<div class='image_right'><%= image_tag("measurement_very_close_up.png", size: '288x190') %></div>
+					<h2>Get an accurate measurement of your blood pressure</h2>
+					<p>You can follow our simple instructions to get a highly accurate measurement of your blood pressure using a home blood pressure monitor. You can then securely store your readings in your on-line account so you can access them anytime, anywhere.</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
-					<div class='image_left'><%= image_tag("graphic_close_up.jpg", size: '288x190') %></div>
-					<h2>Quickly see how high your blood pressure is</h2>
-					<p>You can clearly see how high your blood pressure is. You will get personalised advice from experienced UK GPs to help lower your blood pressure. You can even get prescriptions delivered to your door!</p>
+					<div class='image_left'><%= image_tag("graphic_very_close_up.png", size: '288x190') %></div>
+					<h2>Instantly see how high your blood pressure is</h2>
+					<p>You can quickly and clearly see how high your blood pressure is. You will then get personalised advice from experienced UK GPs to help lower your blood pressure. You can even get prescriptions delivered to your door!</p>
 				</div>
 				<div class='clear_float'></div>
 				<div class='section'>
-					<div class='image_right'><%= image_tag("ask_close_up.jpg", size: '288x190') %></div>
-					<h2>Got a question? Ask a doctor!</h2>
-					<p>You will find answers to your questions on our extensive, friendly information pages. If you have any other questions you can just ask us at the click of a button!</p>
+					<div class='image_right'><%= image_tag("ask_very_close_up.png", size: '288x190') %></div>
+					<h2>Any questions? Ask a doctor!</h2>
+					<p>You will find answers to your questions on our extensive, friendly information pages. If you have any other questions you can quickly ask us at the click of a button!</p>
 				</div>
 				<div class='clear_float'></div>
 			</div>
