--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -23,6 +23,17 @@
               font-size: 1.6em;
             }
           }
+          
+          #text_landing_page {
+            td {
+              font-size:1.6em;
+              line-height: 25px;
+            }
+          
+            .number {
+              font-size: 2em;
+            }
+          }
         }
       }
       
